--- a/papers/ivs13/src/experiments.tex
+++ b/papers/ivs13/src/experiments.tex
@@ -215,6 +215,13 @@ have repeated the experiment $100$ times with the same initial conditions
 ($\delta_x^{(0)}=0.22$ [m], $\delta_y^{(0)}=0.12$ [m], $\psi^{(0)}=0.8$ [rad])
 and amplitudes from $0$ [m] to $3$ [m] with steps of $0.5$ [m].
 
+%\begin{figure}[t]
+%\centering
+%\includegraphics[width=\columnwidth]{fig/dx_ls.eps}
+%\caption{Systematic evaluation.}
+%\label{fig:dx_ls}
+%\end{figure}
+
 \subsection{Real-world Data}
 
 In order to validate our method on real-world data, we have used the ``Lost in
@@ -262,19 +269,19 @@ stem from the fewer number of considered measurements.
 \hline
 & \bfseries LS & \bfseries TQR-MI\\
 \hline\hline
-$\hat{\delta}_x$ [m] & $0.2363$ & $0.2344$\\
+$\hat{\delta}_x$ [m] & $0.2357$ & $0.2344$\\
 \hline
-$\hat{\delta}_y$ [m]& $0.0034$ & $0.0087$\\
+$\hat{\delta}_y$ [m]& $0.0031$ & $0.0087$\\
 \hline
-$\hat{\psi}$ [rad] & $0.0810$ & $0.0754$\\
+$\hat{\psi}$ [rad] & $0.0804$ & $0.0754$\\
 \hline
-$\hat{\Sigma}_{\delta_x}$ [$\text{m}^2$] & $0.0892\times 10^{-5}$ &
+$\hat{\Sigma}_{\delta_x}$ [$\text{m}^2$] & $0.0908\times 10^{-5}$ &
   $0.1903\times 10^{-4}$\\
 \hline
-$\hat{\Sigma}_{\delta_y}$ [$\text{m}^2$] & $0.39\times 10^{-5}$ &
+$\hat{\Sigma}_{\delta_y}$ [$\text{m}^2$] & $0.3917\times 10^{-5}$ &
   $0.7243\times 10^{-4}$\\
 \hline
-$\hat{\Sigma}_{\psi}$ [$\text{rad}^2$] & $0.0254\times 10^{-5}$ &
+$\hat{\Sigma}_{\psi}$ [$\text{rad}^2$] & $0.0286\times 10^{-5}$ &
   $0.0582\times 10^{-4}$\\
 \hline
 $K$ & $12609$ & $1209$\\
