--- a/papers/ivs13/src/experiments.tex
+++ b/papers/ivs13/src/experiments.tex
@@ -160,26 +160,7 @@ determined the threshold empirically from the scaled system
 
 \begin{figure}[t]
 \centering
-\begin{minipage}{.492\columnwidth}
-  \centering
-  \includegraphics[width=\columnwidth]
-    {fig/straight-path-noisefree-svd-scaled.eps}
-\end{minipage}
-\begin{minipage}{.492\columnwidth}
-  \centering
-  \includegraphics[width=\columnwidth]
-    {fig/straight-path-svd-scaled.eps}
-\end{minipage}
-\begin{minipage}{.492\columnwidth}
-  \centering
-  \includegraphics[width=\columnwidth]
-    {fig/straight-path-noisefree-spqr-scaled.eps}
-\end{minipage}
-\begin{minipage}{.492\columnwidth}
-  \centering
-  \includegraphics[width=\columnwidth]
-    {fig/straight-path-spqr-scaled.eps}
-\end{minipage}
+\includegraphics[width=\columnwidth]{fig/straight-path-merged.eps}
 \caption{Straight path example analysis. The first column shows the singular
   values and the diagonal elements of the $\mathbf{R}$ matrix from the QR
   decomposition in the noise-free case, and the second column in the noisy
