--- a/papers/ivs13/src/experiments.tex
+++ b/papers/ivs13/src/experiments.tex
@@ -194,14 +194,16 @@ parameters range from unobservable (straight path or zero amplitude) to
 fully observable (higher amplitude). To get significant statistical results, we
 have repeated the experiment $100$ times with the same initial conditions
 ($\delta_x^{(0)}=0.23$ [m], $\delta_y^{(0)}=0.11$ [m], $\psi^{(0)}=0.8$ [rad])
-and amplitudes from $0$ [m] to $5$ [m] with steps of $0.5$ [m].
+and amplitudes from $0$ [m] to $5$ [m] with steps of $0.5$ [m] over $3000$
+timesteps. Fig.~\ref{fig:sine-wave-analysis} displays the result of this
+experiment.
 
-%\begin{figure}[t]
-%\centering
-%\includegraphics[width=\columnwidth]{fig/dx_ls.eps}
-%\caption{Systematic evaluation.}
-%\label{fig:dx_ls}
-%\end{figure}
+\begin{figure*}[t]
+\centering
+\includegraphics[width=1.9\columnwidth]{fig/sine-wave-analysis.eps}
+\caption{Sine wave results.}
+\label{fig:sine-wave-analysis}
+\end{figure*}
 
 \subsection{Real-world Data}
 
