--- a/papers/ivs13/src/experiments.tex
+++ b/papers/ivs13/src/experiments.tex
@@ -200,7 +200,7 @@ experiment.
 
 \begin{figure*}[t]
 \centering
-\includegraphics[width=1.9\columnwidth]{fig/sine-wave-analysis.eps}
+\includegraphics[width=6.4in]{fig/sine-wave-analysis.eps}
 \caption{Sine wave results.}
 \label{fig:sine-wave-analysis}
 \end{figure*}
