--- a/papers/ivs13/bib/bibliography.bib
+++ b/papers/ivs13/bib/bibliography.bib
@@ -1110,7 +1110,7 @@
 @INPROCEEDINGS{brookshire12extrinsic,
   author = {Jonathan Brookshire and Seth Teller},
   title = {Extrinsic Calibration from Per-Sensor Egomotion},
-  booktitle = {Proc. of the 8th Robotics: Science and Systems Conference (RSS)},
+  booktitle = {Proc. 8th Robot.: Sci. Syst. Conf. (RSS)},
   year = {2012},
   file = {brookshire12extrinsic.pdf:brookshire12extrinsic.pdf:PDF},
   owner = {jmaye},
@@ -1908,7 +1908,7 @@
   author = {Timothy A. Davis},
   title = {Algorithm 915: {SuiteSparseQR}: Multifrontal multithreaded rank-revealing
 	sparse {QR} factorization},
-  journal = {ACM Transactions on Mathematical Software},
+  journal = {ACM Trans. Math. Softw.},
   year = {2011},
   volume = {38},
   pages = {1-24},
@@ -1920,8 +1920,7 @@
 @INPROCEEDINGS{davison05active,
   author = {Andrew J. Davison},
   title = {Active Search for Real-Time Vision},
-  booktitle = {Proc. of the 10th IEEE International Conference on Computer Vision
-	(ICCV)},
+  booktitle = {Proc. 10th IEEE Int. Conf. Comput. Vision (ICCV)},
   year = {2005},
   file = {davison05active.pdf:davison05active.pdf:PDF},
   owner = {jmaye},
@@ -2319,7 +2318,7 @@
 @ARTICLE{durrantwhyte06simultaneous,
   author = {Hugh Durrant-Whyte and Tim Bailey},
   title = {Simultaneous Localization and Mapping: Part {I}},
-  journal = {IEEE Robotics and Automation Magazine (RAM)},
+  journal = {IEEE Robot. Automat. Mag. (RAM)},
   year = {2006},
   volume = {13},
   pages = {99-108},
@@ -2928,7 +2927,7 @@
 @ARTICLE{fiore01efficient,
   author = {Paul D. Fiore},
   title = {Efficient Linear Solution of Exterior Orientation},
-  journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence (PAMI)},
+  journal = {IEEE Trans. Pattern Anal. Machine Intell. (PAMI)},
   year = {2001},
   volume = {23},
   pages = {140-148},
@@ -3840,7 +3839,7 @@
 @ARTICLE{hermann77nonlinear,
   author = {Robert Hermann and Arthur J. Krener},
   title = {Nonlinear controllability and observability},
-  journal = {IEEE Transactions on Automatic Control},
+  journal = {IEEE Trans. Automat. Contr.},
   year = {1977},
   volume = {22},
   pages = {728-740},
@@ -4174,7 +4173,7 @@
 @ARTICLE{jauffret07observability,
   author = {Claude Jauffret},
   title = {Observability and {Fisher} Information Matrix in Nonlinear Regression},
-  journal = {IEEE Transactions on Aerospace and Electronic Systems},
+  journal = {IEEE Trans. Aerosp. Electron. Syst.},
   year = {2007},
   volume = {43},
   pages = {756-759},
@@ -4361,7 +4360,7 @@
   author = {Michael Kaess and Frank Dellaert},
   title = {Covariance Recovery from a Square Root Information Matrix for Data
 	Association},
-  journal = {Robotics and Autonomous Systems (RAS)},
+  journal = {Robot. Autonomous Syst. (RAS)},
   year = {2009},
   volume = {57},
   pages = {1198-1210},
@@ -4523,7 +4522,7 @@
   author = {Jonathan Kelly and Gaurav S. Sukhatme},
   title = {Visual-Inertial Sensor Fusion: Localization, Mapping and Sensor-to-Sensor
 	Self-Calibration},
-  journal = {The International Journal of Robotics Research (IJRR)},
+  journal = {Int. J. Robot. Research (IJRR)},
   year = {2011},
   volume = {30},
   pages = {56-79},
@@ -4830,8 +4829,7 @@
 @INPROCEEDINGS{kuemmerle11simultaneous,
   author = {Rainer Kuemmerle and Giorgio Grisetti and Wolfram Burgard},
   title = {Simultaneous Calibration, Localization, and Mapping},
-  booktitle = {Proc. of the IEEE/RSJ International Conference on Intelligent Robots
-	and Systems (IROS)},
+  booktitle = {Proc. IEEE/RSJ Int. Conf. Intell. Robots Syst. (IROS)},
   year = {2011},
   file = {kuemmerle11simultaneous.pdf:kuemmerle11simultaneous.pdf:PDF},
   owner = {jmaye},
@@ -4933,7 +4931,7 @@
   author = {Pierre L\'ebraly and Eric Royer and Omar Ait-Aider and Michel Dhome},
   title = {Calibration of Non-Overlapping Cameras - Application to Vision-Based
 	Robotics},
-  booktitle = {Proc. of the 21st British Machine Vision Conference (BMVC)},
+  booktitle = {Proc. 21st British Machine Vision Conf. (BMVC)},
   year = {2010},
   file = {lebraly10calibration.pdf:lebraly10calibration.pdf:PDF},
   owner = {jmaye},
@@ -5309,8 +5307,7 @@
 @INPROCEEDINGS{levinson10unsupervised,
   author = {Jesse Levinson and Sebastian Thrun},
   title = {Unsupervised Calibration for Multi-beam Lasers},
-  booktitle = {Proc. of the 12th International Symposium on Experimental Robotics
-	(ISER)},
+  booktitle = {Proc. 12th Int. Symp. Experimental Robotics (ISER)},
   year = {2010},
   file = {levinson10unsupervised.pdf:levinson10unsupervised.pdf:PDF},
   owner = {jmaye},
@@ -5781,8 +5778,7 @@
 @INPROCEEDINGS{martinelli06automatic,
   author = {Agostino Martinelli and Davide Scaramuzza and Roland Siegwart},
   title = {Automatic Self-Calibration of a Vision System during Robot Motion},
-  booktitle = {Proc. of the IEEE International Conference on Robotics and Automation
-	(ICRA)},
+  booktitle = {Proc. IEEE Int. Conf. Robot. Automat. (ICRA)},
   year = {2006},
   file = {martinelli06automatic.pdf:martinelli06automatic.pdf:PDF},
   owner = {jmaye},
@@ -6134,7 +6130,7 @@
   author = {Faraz M. Mirzaei and Stergios I. Roumeliotis},
   title = {A {K}alman Filter-Based Algorithm for {IMU}-Camera Calibration: Observability
 	Analysis and Performance Evaluation},
-  journal = {IEEE Transactions on Robotics},
+  journal = {IEEE Trans. Robot.},
   year = {2008},
   volume = {24},
   pages = {1143 - 1156},
@@ -7682,7 +7678,7 @@
 @ARTICLE{sheehan12self,
   author = {Mark Sheehan and Alastair Harrison and Paul Newman},
   title = {Self-Calibration for a {3D} Laser},
-  journal = {The International Journal of Robotics Research (IJRR)},
+  journal = {Int. J. Robot. Research (IJRR)},
   year = {2012},
   volume = {31},
   pages = {675-687},
@@ -8228,8 +8224,7 @@
   author = {Peter F. Sturm and Stephen J. Maybank},
   title = {On plane-based camera calibration: A general algorithm, singularities,
 	applications},
-  booktitle = {Proc. of the 12th IEEE Conference on Computer Vision and Pattern
-	Recognition (CVPR)},
+  booktitle = {Proc. 12th IEEE Conf. Comput. Vision and Pattern Recognition (CVPR)},
   year = {1999},
   file = {sturm99plane.pdf:sturm99plane.pdf:PDF},
   owner = {jmaye},
@@ -8620,7 +8615,7 @@
 @INPROCEEDINGS{tong12gaussian,
   author = {Chi Hay Tong and Paul Furgale and Timothy D. Barfoot},
   title = {Gaussian Process {Gauss}-{Newton}: Non-Parametric State Estimation},
-  booktitle = {Proc. of the 9th Conference on Computer and Robot Vision (CRV)},
+  booktitle = {Proc. 9th Conf. Comput. Robot Vision (CRV)},
   year = {2012},
   file = {tong12gaussian.pdf:tong12gaussian.pdf:PDF},
   owner = {jmaye},
@@ -8846,7 +8841,7 @@
   author = {J. M. Varah},
   title = {On the Numerical Solution of Ill-Conditioned Linear Systems with
 	Applications to Ill-Posed Problems},
-  journal = {SIAM Journal on Numerical Analysis},
+  journal = {SIAM J. Numerical Anal.},
   year = {1973},
   volume = {10},
   pages = {257-267},
@@ -9538,8 +9533,7 @@
   author = {Zhang, Q. and Pless, R.},
   title = {Extrinsic calibration of a camera and laser range finder (improves
 	camera calibration)},
-  booktitle = {Proc. of the IEEE/RSJ International Conference on Intelligent Robots
-	and Systems (IROS)},
+  booktitle = {Proc. IEEE/RSJ Int. Conf. Intell. Robots Syst. (IROS)},
   year = {2004},
   file = {zhang04extrinsic.pdf:zhang04extrinsic.pdf:PDF},
   pdf = {zhang04extrinsic.pdf}
