--- a/papers/ivs13/src/model.tex
+++ b/papers/ivs13/src/model.tex
@@ -494,9 +494,9 @@ $\mathbf{\Theta}_1$ and $\mathcal{D}_2$ can then be computed as
 
 \begin{equation}\label{eqn:mi_normal}
   \begin{aligned}
-  I(\mathbf{\Theta}_1;\mathcal{D}_2) &=
-    \mathbb{E}\left[\log
-    \frac{p(\mathbf{\Theta}_1\mid\mathcal{D}_2)}{p(\mathbf{\Theta}_1)}\right]\\
+  I(\mathbf{\Theta}_1;\mathcal{D}_2) %&=
+%    \mathbb{E}\left[\log
+%    \frac{p(\mathbf{\Theta}_1\mid\mathcal{D}_2)}{p(\mathbf{\Theta}_1)}\right]\\
     &= \frac{1}{2}\log\frac{|\boldsymbol{\Sigma}_{\boldsymbol{\Theta}_1
     \boldsymbol{\Theta}_1}|}
     {|\boldsymbol{\Sigma}_{\boldsymbol{\Theta}_1\boldsymbol{\Theta}_1} -
