--- a/papers/ivs13/src/introduction.tex
+++ b/papers/ivs13/src/introduction.tex
@@ -6,8 +6,8 @@ case, incorrect parameter values degrade performance. In the worst case, they
 cause critical safety issues.
 
 We are interested in developing automated systems that are capable of robust
-long-term deployment in the hands of non-experts, so the identification and
-update of these parameter values is highly important.
+long-term deployment in the hands of non-experts, so the automatic
+identification and update of these parameter values is highly important.
 
 As an example, consider a camera-based collision avoidance system intended for
 deployment in a consumer automobile. For the vehicle to be able to avoid
