Updated the abstract and Figure 1 caption

--- a/papers/ivs13/main.tex
+++ b/papers/ivs13/main.tex
@@ -65,8 +65,7 @@ email: \{jerome.maye, paul.furgale, roland.siegwart\}@mavt.ethz.ch}
 
 \maketitle
 
-\begin{abstract}
-\input{src/abstract.tex}
+\begin{abstract}\input{src/abstract.tex}
 \end{abstract}
 
 \section{Introduction\label{intro}}
