--- a/papers/ivs13/src/introduction.tex
+++ b/papers/ivs13/src/introduction.tex
@@ -18,6 +18,19 @@ will have no access to special calibration hardware or expert data analysis.
 In such a scenario, the vehicle must be capable of self-supervised
 recalibration. This problem is inherently difficult for a number of reasons that
 we will briefly discuss here.
+\begin{figure}[t]
+\centering
+\includegraphics[]{fig/sin-path-result.eps}
+\caption{Exemplary output of our calibration algorithm. The ground
+  truth trajectory and landmark positions are shown in green, their
+  respective estimates in blue, and the integrated odometry path in
+  red.  An information theoretic measure is used to automatically
+  identify and store novel measurement sequences (shown in blue),
+  discarding redundant information and building a sparse but complete
+  calibration dataset from data collected at different
+  times.\vspace{-4.5pt}}
+\label{fig:calib_demo}
+\end{figure}
 
 {\bf 1) Parameters change over time}---although the vehicle may be factory
 calibrated, the transformations can change slowly over time due to vibration,
@@ -46,17 +59,6 @@ presence of noise}---even if our hypothetical car is piloted only on a plane (a
 degenerate case), noise in the measurements can make unobservable parameters
 appear observable. We call these parameters {\em numerically unobservable} to
 mirror the related concept of numerically rank-deficient matrices.
-
-\begin{figure}[t]
-\centering
-\includegraphics[]{fig/sin-path-result.eps}
-\caption{Exemplary output of our calibration algorithm. The ground truth
-  trajectory and landmark positions are shown in green,
-  their respective estimates in blue, and the integrated odometry path in red.
-  While dealing with degenerate cases, our method only selects batches of data
-  that provide enough information to the estimator.\vspace{-4.5pt}}
-\label{fig:calib_demo}
-\end{figure}
 
 Existing algorithms for self calibration generally handle issues (1) and (2).
 Issue (3) is dealt with by designing experiments that guarantee all parameters
