Changed the title.

--- a/papers/ivs13/main.tex
+++ b/papers/ivs13/main.tex
@@ -50,7 +50,7 @@ factor/.style={rectangle, fill=gray!25,minimum size=15pt, inner sep=1pt,draw=bla
 \begin{document}
 
 \title{\LARGE \bf
-Self-supervised Calibration for Mobile Robot Sensors
+Self-supervised Calibration for Robotic Systems
 }
 
 \author{
