last update before submission

--- a/papers/ivs13/main.tex
+++ b/papers/ivs13/main.tex
@@ -14,7 +14,7 @@
 \usepackage[T1]{fontenc}
 \usepackage{cite}
 \usepackage[ruled,lined]{algorithm2e}
-\usepackage{todonotes}
+\usepackage{balance}
 
 \usetikzlibrary{shapes,decorations,shadows}
 \usetikzlibrary{decorations.pathmorphing}
@@ -85,6 +85,7 @@ email: \{jerome.maye, paul.furgale, roland.siegwart\}@mavt.ethz.ch}
 
 \section*{Acknowledgment}
 This work has partly been supported by the EC under FP7-269916-V-Charge.
+\balance
 
 \bibliographystyle{sty/IEEEtran}
 \bibliography{bib/bibliography}
