--- a/papers/ivs13/src/conclusion.tex
+++ b/papers/ivs13/src/conclusion.tex
@@ -6,10 +6,10 @@ regularization method. For long-term and online operations, we have devised
 a mutual information selection scheme that solely captures informative
 measurements relevant to the calibration. Our algorithm has been thoroughly
 tested and validated through extensive simulated and real-world experiments on
-a 2D robot equipped with a laser range finder.
+a 2D robot equipped with a laser range finder (LRF).
 
 In the near future, we will consider the self calibration of multiple sensors
-(cameras, 3D/2D LRF, GPS/INS system) mounted on an autonomous car and a C++
+(cameras, 3D/2D LRF, GPS/INS system, \dots) mounted on an autonomous car and a C++
 implementation. From a research point of view, we would like to further automate
 the selection of the free parameters. Lastly, we want to detect stepwise changes
 in the calibration parameters in order to trigger recalibration in case of
